[package]
authors = ["kyano"]
name = "week3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-crypto = "0.2.36"
rand = "0.8.5"
thiserror = "1.0.37"
anyhow = "1.0.66"
blake3 = "1.3.3"

[dev-dependencies]
criterion = "0.4"

[[bench]]
name = "bench"
harness = false